Update oom-and-gc.md